--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-scroll": "^1.7.7",
+    "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
